--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.0
+  firebase_storage: ^11.5.3
+  cloud_firestore: ^4.13.3
+  provider: ^6.1.1
+  get_it: ^7.6.4
+  file_picker: ^6.1.1
+  flutter_spinkit: ^5.2.0
+  timeago: ^3.6.0
+  flutter_keyboard_visibility: ^5.4.1
 
 dev_dependencies:
   flutter_test:
