--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   timeago: ^3.6.0
   flutter_keyboard_visibility: ^5.4.1
+  firebase_analytics: ^10.7.2
 
 dev_dependencies:
   flutter_test:
